# image_uploader

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  main.py  pyproject.toml  run.py  test_core.py  wrangler.toml
.github/: copilot-instructions.md
app/: __init__.py  config.py  error_handlers.py  routes.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: index.html
app/utils/: __init__.py  image_utils.py  memory_utils.py  storage_utils.py
docs/: API.md  MEMORY_OPTIMIZATION.md
